<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.taski.ui.splash.SplashFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.example.taski.ui.onboarding.OnboardingFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.taski.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.example.taski.ui.tasks.TasksFragment"
        android:label="@string/nav_tasks"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/planFragment"
        android:name="com.example.taski.ui.plan.PlanFragment"
        android:label="@string/nav_plan"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/focusFragment"
        android:name="com.example.taski.ui.focus.FocusFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/progressFragment"
        android:name="com.example.taski.ui.progress.ProgressFragment"
        android:label="@string/nav_progress"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.taski.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_placeholder" />
</navigation>
